grammar.js
    source_file: $ => repeat($._statement),
    _statement: $ => choice(
      $.address_block,
      $.script_block,
      $.module_definition,

      // the following is additional to make move code pieces highlighting work.
      $._block_item,
      $.use_decl,
      $._function_definition,
      $._struct_definition,
    ),

    use_decl: $ => seq('use', choice($.use_module, $.use_module_member, $.use_module_members), ';'),

    // use 0x1::A (as AA);
    use_module: $ => seq($.module_identity, optional(seq('as', field('alias', $._module_identifier)))),
    // use 0x1::A::T as TT;
    // use 0x1::A::f as ff;
    module_definition: $ => {
      return seq(
        'module',
        field('name', $._module_identifier),
        field('body', $.module_body),
      );
    },
    module_body: $ => {
      return seq(
        '{',
        repeat(choice(
          $.use_decl,
          $.constant,
          $._function_definition,
          $._struct_definition,
          $.spec_block,
        )),
        '}'
      );
    },

    _struct_definition: $ => choice(
      $.native_struct_definition,
      $.struct_definition,
    ),
    struct_definition: $ => seq(
      $._struct_signature,
      field('fields', $.struct_def_fields),
    ),
    struct_def_fields: $ => seq(
      '{',
      sepBy(',', $.field_annotation),
      '}'
    ),
    _struct_signature: $ => seq(
      optional('resource'),
      'struct',
      field('name', $._struct_identifier),
      optional(field('type_parameters', $.type_parameters)),
    ),

    _function_definition: $ => choice(
      $.native_function_definition,
      $.usual_function_definition,
    ),
    native_function_definition: $ => seq(
      'native',
      $._function_signature,
      ';'
    ),
    usual_function_definition: $ => seq(
      $._function_signature,
      field('body', $.block)
    ),
    _function_signature: $ => seq(
      optional('public'),
      'fun',
      field('name', $._function_identifier),
      optional(field('type_parameters', $.type_parameters)),
      field('params', $.func_params),
      optional(seq(':', field('return_type', $._type))),
      optional(field('acquires', $.resource_accquires)),
    ),
    func_params: $ => seq(
      '(',
      sepBy(',', $.function_parameter),
      ')',
    ),
    resource_accquires: $ => seq(
      'acquires', sepBy1(',', $._module_access)
    ),

    //// Spec block start
    _type: $ => choice(
      // $.immutable_borrow_type,
      // $.mutable_borrow_type,
      $.apply_type,
      $.ref_type,
      $.tuple_type,
      // $.primative_type,
      // TODO: spec only
      $.function_type,
    ),
    apply_type: $ => seq(
      $._module_access,
      optional(field('type_arguments', $.type_arguments)),
    ),
    ref_type: $ => seq(
      field('mutable', choice('&', '&mut')),
      $._type
    ),
    tuple_type: $ => seq('(', sepBy1(',', $._type), ')'),
    _module_access: $ => choice(
      alias($._reserved_identifier, $.identifier),
      $.identifier,
      $.module_access,
      $.qualified_module_access,
    ),
    module_access: $ => seq(
      field('module', $._module_identifier),
      '::',
      field('member', $.identifier)
    ),
    module_identity: $ => seq(
      field('address', $.address_literal),
      '::',
      field('module', $._module_identifier)
    ),

    type_arguments: $ => seq(
      '<',
      sepBy1(',', $._type),
      '>'
    ),

    function_parameter: $ => seq(
      field('name', $._variable_identifier),
      ':',
      field('type', $._type),
    ),

    // type parameter grammar
    type_parameters: $ => seq('<', sepBy1(',', $.type_parameter), '>'),
    type_parameter: $ => seq(
      $._type_parameter_identifier,
      optional(seq(':', choice('copyable', 'resource')))
    ),


    //// Block

    block: $ => seq(
      '{',
      repeat($.use_decl),
      repeat($._block_item),
      optional(choice($._expression, $.let_statement)),
      '}'
    ),
    _block_item: $ => seq(
      choice(
        $._expression,
        $.let_statement,
      ),
      ';'
    ),
    let_statement: $ => seq(
      'let',
      field('binds', $.bind_list),
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('exp', $._expression)))
    ),
    //// Block end


    //// Expression

    _expression: $ => choice(
      // TODO: spec only
      $.lambda_expression,
      $.if_expression,
      $.while_expression,
      $.loop_expression,
      $.return_expression,
      $.abort_expression,
      $.assign_expression,
      // unary expression is included in binary_op,
      $._unary_expression,
      $.binary_expression,
      $.quantifier_expression
    ),

    name_expression: $ => seq(
      field('access', $._module_access),
      optional(field('type_arguments', $.type_arguments)),
    ),
    pack_expression: $ => seq(
      field('access', $._module_access),
      optional(field('type_arguments', $.type_arguments)),
      field('body', $.field_initialize_list),
    ),

    field_initialize_list: $ => seq(
      '{',
      sepBy(',', $.exp_field),
      '}'
    ),

    exp_field: $ => seq(
      field('field', $._field_identifier),
      optional(seq(
        ':',
        field('exp', $._expression)
      ))
    ),

    // The bindlist is enclosed in parenthesis, except that the parenthesis are
    // optional if there is a single Bind.
    bind_list: $ => choice(
      $._bind,
      seq('(', sepBy(',', $._bind), ')')
    ),
    _bind: $ => choice(
      alias($._variable_identifier, $.bind_var),
      $.bind_unpack,
    ),
    address_literal: $ => /0x[a-fA-F0-9]+/,
    _module_identifier: $ => alias($.identifier, $.module_identifier),
    _variable_identifier: $ => alias($.identifier, $.variable_identifier),
    _field_identifier: $ => alias($.identifier, $.field_identifier),
    _type_parameter_identifier: $ => alias($.identifier, $.type_parameter_identifier),

    identifier: $ => /[a-zA-Z_][0-9a-zA-Z_]*/,
