test/corpus/function_definition.txt

====
function_definition
====

native public fun t<A>() acquires T;

public fun deposit<Token>(payee: address, to_deposit: Libra::T<Token>) acquires T, Balance {
}

----

(source_file
  (native_function_definition
    name: (function_identifier)
    type_parameters: (type_parameters
      (type_parameter
        (type_parameter_identifier)))
    params: (func_params)
    acquires: (resource_accquires
      (module_access
        (identifier))))
  (usual_function_definition
    name: (function_identifier)
    type_parameters: (type_parameters
      (type_parameter
        (type_parameter_identifier)))
    params: (func_params
      (function_parameter
        name: (variable_identifier)
        type: (apply_type
          (module_access
            (identifier))))
      (function_parameter
        name: (variable_identifier)
        type: (apply_type
          (module_access
            module: (module_identifier)
            member: (identifier))
          type_arguments: (type_arguments
            (apply_type
              (module_access
                (identifier)))))))
    acquires: (resource_accquires
      (module_access
        (identifier))
      (module_access
        (identifier)))
    body: (block)))
